--- a/app/assets/stylesheets/rich-text-content.css
+++ b/app/assets/stylesheets/rich-text-content.css
@@ -114,7 +114,7 @@
         text-align: start;
 
         strong {
-          color: tx(--color-ink);
+          color: var(--color-ink);
         }
       }
     }
