--- a/app/views/cards/taggings/new.html.erb
+++ b/app/views/cards/taggings/new.html.erb
@@ -1,9 +1,16 @@
 <%= turbo_frame_tag @card, :tagging do %>
-  <dialog class="popup panel flex-column align-start justify-start fill-white shadow" data-dialog-target="dialog">
+  <dialog class="popup panel flex-column align-start justify-start fill-white shadow"
+    data-controller="filter navigable-list"
+    data-dialog-target="dialog filter navigable-list"
+    data-navigable-list-focus-on-selection-value="false"
+    data-navigable-list-actionable-items-value="true"
+    data-action="keydown->navigable-list#navigate filter:changed->navigable-list#reset"
+  >
     <strong class="popup__title margin-block-end-half pad-inline-half">Tag this…</strong>
 
     <%= form_with url: card_taggings_path(@card), class: "flex gap-half align-center full-width pad-inline-half margin-block-end" do |form| %>
-      <%= form.text_field :tag_title, placeholder: "New tag name...", class: "input txt-small full-width", autocomplete: "off" %>
+      <%= form.text_field :tag_title, placeholder: "New tag name...", class: "input txt-small full-width",
+            autocomplete: "off", data: { filter_target: "input", action: "input->filter#filter" } %>
       <%= form.button "Add a tag…", type: "submit", class: "btn txt-small" do %>
         <%= icon_tag "add" %>
         <span class="for-screen-reader">Add a tag</span>
@@ -12,9 +19,10 @@
 
     <div class="flex flex-column full-width popup__list">
       <% @tags.each do |tag| %>
-          <%= button_to card_taggings_path(@card, params: { tag_title: tag.title }), method: :post, class: "btn full-width popup__item" do %>
-            <span class="overflow-ellipsis"><%= tag.hashtag %></span>
-            <%= icon_tag "check", size: 18, class: "checked flex-item-justify-end" if @card.tagged_with?(tag) %>
+        <%= button_to card_taggings_path(@card, params: { tag_title: tag.title }),
+              method: :post, class: "btn full-width popup__item", data: { filter_target: "item", navigable_list_target: "item" } do %>
+          <span class="overflow-ellipsis"><%= tag.hashtag %></span>
+          <%= icon_tag "check", size: 18, class: "checked flex-item-justify-end" if @card.tagged_with?(tag) %>
         <% end %>
       <% end %>
     </div>
