Place highlights after the "timelined day"

--- a/app/views/events/_weekly_highlights.html.erb
+++ b/app/views/events/_weekly_highlights.html.erb
@@ -1,3 +1,17 @@
-<div class="events__activity-summary txt-small">
-  <%= day_timeline.weekly_highlights.to_html %>
-</div>
+<% if day_timeline.has_weekly_highlights? %>
+  <h2 class="events__day-header">
+        <span class="events__day-time min-width max-width">
+          <span class="overflow-ellipsis">
+            <span>Highlights for</span>
+            **<%= local_datetime_tag day_timeline.day, style: :agoorweekday %>**
+            <%= local_datetime_tag day_timeline.weekly_highlights.starts_at, style: :agoorweekday %>
+            -
+            <%= local_datetime_tag day_timeline.weekly_highlights.ends_at, style: :agoorweekday %>
+          </span>
+        </span>
+  </h2>
+
+  <div class="events__activity-summary txt-small">
+    <%= day_timeline.weekly_highlights.to_html %>
+  </div>
+<% end %>
