--- a/app/views/entropy/_auto_close.html.erb
+++ b/app/views/entropy/_auto_close.html.erb
@@ -2,8 +2,8 @@
 
 <div class="flex align-start gap txt-align-center">
   <div class="flex flex-column flex-1">
-    <strong>Cards in The Stream</strong>
-    <p class="txt-x-small margin-none-block-start">Auto-close after…</p>
+    <strong>The Stream</strong>
+    <p class="txt-x-small margin-none-block-start">Cards auto-close after…</p>
     <%= form_with model: model, url: url, data: { controller: "form" } do |form| %>
       <%= render "entropy/knob",
             form: form,
@@ -16,8 +16,8 @@
   <div class="separator margin-block-half" style="--border-color: var(--color-ink-light); min-block-size: 3lh;"></div>
 
   <div class="flex flex-column flex-1">
-    <strong>Cards in On Deck/Working On</strong>
-    <p class="txt-x-small margin-none-block-start">Back to The Stream after…</p>
+    <strong>On Deck/Working On</strong>
+    <p class="txt-x-small margin-none-block-start">Cards return to The Stream after…</p>
     <%= form_with model: model, url: url, data: { controller: "form" } do |form| %>
       <%= render "entropy/knob",
             form: form,
